# riptail

./: .gitignore  Cargo.toml  b.txt  readme.md
src/: main.rs
