[package]
name = "riptail"
version = "1.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
colored = "3.0.0"
futures = "0.3.31"
notify = "8.0.0"
regex = "1.11.1"
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = "0.1.17"
walkdir = "2.5.0"
